kubernetes/feed_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-api
spec:
  template:
    metadata:
      name: feed-pod
      labels:
        app: feed-app
    spec:
      containers:
        - name: feed-container
          image: davidlegend/udagram-feed-api:latest
          ports:
          - containerPort: 8080

          imagePullPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      app: feed-app
