kubernetes/user_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
spec:
  template:
    metadata:
      name: user-pod
      labels:
        app: user-app
    spec:
      containers:
        - name: user-container
          image: davidlegend/udagram-user-api:latest
          ports:
          - containerPort: 8080

          imagePullPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      app: user-app
